# common_rs

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/: db.rs  init.rs  lib.rs  utils.rs
common/src/init/: logger.rs  signal.rs
common_conn/: Cargo.toml
common_conn/src/: err.rs  lib.rs
common_core/: Cargo.toml
common_core/src/: collection.rs  lib.rs  logger.rs
common_core/src/collection/: observer.rs  pool.rs
common_core/src/collection/pool/: owned_pool.rs
common_core/src/err/: common_err.rs  mod.rs
common_core/src/tests/: mod.rs
common_core/src/utils/: func.rs  macros.rs  mod.rs  types.rs
common_core/tests/: mod.rs
common_err/: Cargo.toml  build.rs
common_err/asset/: default.toml
common_err/src/: gen.rs  lib.rs  utils.rs
common_exec_duckdb/: Cargo.toml
common_exec_duckdb/src/: db_conn.rs  lib.rs
common_exec_duckdb/tests/: tests_pair.rs
common_exec_odbc/: Cargo.toml
common_exec_odbc/src/: db_conn.rs  lib.rs
common_exec_odbc/tests/: tests_pair.rs
common_exec_pg/: Cargo.toml
common_exec_pg/src/: db_conn.rs  lib.rs
common_exec_pg/tests/: tests_pair.rs
common_exec_redis/: Cargo.toml
common_exec_redis/src/: db_conn.rs  lib.rs
common_exec_redis/tests/: tests_pair.rs
common_exec_scylla/: Cargo.toml
common_exec_scylla/src/: db_conn.rs  lib.rs
common_exec_scylla/src/db_conn/: util.rs
common_exec_scylla/src/db_conn/util/: pair.rs  relational.rs
common_exec_scylla/tests/: tests_pair.rs
common_exec_shell/: Cargo.toml
common_exec_shell/src/: lib.rs  shell_conn.rs
common_logger/: Cargo.toml
common_logger/src/: console_logger.rs  file_logger.rs  lib.rs  scylla_logger.rs
common_logger/tests/: tests_log.rs
common_pair_exec/: Cargo.toml
common_pair_exec/src/: lib.rs
common_relational_exec/: Cargo.toml
common_relational_exec/src/: lib.rs
common_rs/: Cargo.toml
common_rs/src/: db.rs  init.rs  lib.rs
common_rs/src/init/: err_code.rs  logger.rs
common_thread/: Cargo.toml
common_thread/src/: lib.rs  simple.rs  simple_th_pool.rs
common_thread/src/simple/: instant_manager.rs  thread_pool.rs
duckdb_conn/: Cargo.toml
duckdb_conn/src/: db_conn.rs  lib.rs
postgres_conn/: Cargo.toml
postgres_conn/src/: db_conn.rs  lib.rs
scylla_conn/: Cargo.toml
scylla_conn/src/: db_conn.rs  lib.rs
scylla_conn/src/db_conn/: utils.rs
scylla_conn/tests/: mod.rs
