[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
ftail = "0.2.0"
libc = "0.2.174"

common_core = {path = "../common_core"}
common_conn = {path = "../common_conn"}
duckdb_conn = {path = "../duckdb_conn"}
scylla_conn = {path = "../scylla_conn"}
postgres_conn = {path = "../postgres_conn"}

[lib]
crate-type = ["cdylib"]