[package]
name = "common_exec_duckdb"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.3.0",  features = ["bundled"]}
common_core = {path = "../common_core"}
common_pair_exec = {path = "../common_pair_exec"}
common_err = {path = "../common_err"}

[dev-dependencies]
common_pair_exec = {path = "../common_pair_exec"}
common_core = {path = "../common_core"}
common_exec_duckdb = {path = "../common_exec_duckdb"}
toml = "0.8.19"

[[test]]
name = "test_scylla"
path = "tests/tests_pair.rs"