[package]
name = "common_exec_odbc"
version = "0.1.0"
edition = "2021"

[dependencies]
common_core = {path = "../common_core"}
common_pair_exec = {path = "../common_pair_exec"}
common_err = {path = "../common_err"}
odbc-sys = "0.28.0"
libc = "0.2.174"

[[test]]
name = "test_odbc"
path = "tests/tests_pair.rs"