[package]
name = "common_exec_pg"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = "0.19.9"
common_core = {path = "../common_core"}
common_pair_exec = {path = "../common_pair_exec"}
common_err = {path = "../common_err"}


[dev-dependencies]
common_pair_exec = {path = "../common_pair_exec"}
common_core = {path = "../common_core"}
common_exec_pg = {path = "../common_exec_pg"}
toml = "0.8.19"


[[test]]
name = "test_pg"
path = "tests/tests_pair.rs"