[package]
name = "common_exec_scylla"
version = "0.1.0"
edition = "2021"

[dependencies]
common_core = {path = "../common_core"}
common_pair_exec = {path = "../common_pair_exec"}
common_relational_exec = {path = "../common_relational_exec"}
tokio = {version = "1.43.0"}
scylla = "1.3.1"
common_err = {path = "../common_err"}


[dev-dependencies]
common_pair_exec = {path = "../common_pair_exec"}
common_core = {path = "../common_core"}
common_exec_scylla = {path = "../common_exec_scylla"}
toml = "0.8.19"

[[test]]
name = "test_scylla"
path = "tests/tests.rs"