[package]
name = "common_rs"
version = "0.1.1"
edition = "2021"

[dependencies]
common_core = {path = "../common_core"}
common_err = {path = "../common_err"}
common_thread = {path = "../common_thread"}
common_exec_duckdb = {path = "../common_exec_duckdb"}
common_exec_pg = {path = "../common_exec_pg"}
common_exec_scylla = {path = "../common_exec_scylla"}
common_pair_exec = {path = "../common_pair_exec"}
common_relational_exec = {path = "../common_relational_exec"}

log = "0.4.22"
ftail = "0.3.1"
libc = "0.2.174"

[features]
use_custom_common_err = ["common_err/file"]