[package]
name = "common_rs"
version = "0.1.1"
edition = "2021"

[dependencies]
common_core = {path = "../common_core"}
common_err = {path = "../common_err"}
common_thread = {path = "../common_thread"}
common_exec_duckdb = {path = "../common_exec_duckdb"}
common_exec_pg = {path = "../common_exec_pg"}
common_exec_scylla = {path = "../common_exec_scylla"}
common_exec_redis = {path = "../common_exec_redis"}
common_pair_exec = {path = "../common_pair_exec"}

logforth = { version = "0.29.1", features = ["starter-log"] }
libc = "0.2.174"

[features]
use_custom_common_err = ["common_err/file"]

[lib]
crate-type = ["dylib"]